Chaged processing textures to always create a SimpleMaterialBasis since the code to work with disable in SpecularDecompositionFromScratch was getting pretty complicated.